<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AddPostActivity">

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add New Ride"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/headings"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/editTextFrom"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_source"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/editToDest"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_destination"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextFrom"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/editNoOfSeats"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/enter_no_of_seats"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@+id/editToDest"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/enter_contact_number"
        android:inputType="phone"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@+id/editNoOfSeats"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/editTextCity"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/enter_your_city"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/editTextDesc"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/enter_description"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextCity"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btnSavePost"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/post"
        android:textSize="14sp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="30dp"
        android:backgroundTint="@color/buttons_color"
        android:textColor="@color/button_text"
        app:layout_constraintTop_toBottomOf="@+id/editTextDesc"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>