<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.UserAccountFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lblHeading"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="Profile"
            android:textColor="@color/headings"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_marginTop="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/lblUserName"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/lblHeading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/lblEmail"
            android:text="@string/user_email"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblUserName"
            />
        <TextView
            android:id="@+id/lblPhoneNo"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="@string/user_contact_no"
            android:textColor="@color/text_color"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblEmail"
            />

        <TextView
            android:id="@+id/lblCity"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/city"
            android:textColor="@color/text_color"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblPhoneNo" />

        <TextView
            android:id="@+id/lblCountry"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:textColor="@color/text_color"
            android:text="@string/country"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblCity" />

        <Button
            android:id="@+id/btnUpdateAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_account"
            android:backgroundTint="@color/buttons_color"
            android:textColor="@color/button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnDeleteAcc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblCountry"
            app:layout_constraintVertical_bias="0.336" />

        <Button
            android:id="@+id/btnDeleteAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_account"
            android:backgroundTint="@color/buttons_color"
            android:textColor="@color/button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnUpdateAcc"
            app:layout_constraintTop_toBottomOf="@id/lblCountry"
            app:layout_constraintVertical_bias="0.336" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:backgroundTint="@color/buttons_color"
            android:textColor="@color/button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnDeleteAcc"
            app:layout_constraintVertical_bias="0.245" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>