<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SignUpActivity"
    android:layout_margin="5dp">

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textColor="@color/headings"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/editEmailAddress"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email_address"
        android:textAlignment="center"
        android:inputType="textEmailAddress"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserName"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/enter_new_password"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@+id/editEmailAddress"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="@string/enter_contact_number"
        android:inputType="phone"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="Create Account"
        android:textSize="14sp"
        android:backgroundTint="@color/buttons_color"
        android:textColor="@color/black"
        android:layout_marginTop="100dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
        app:layout_constraintStart_toStartOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>